Fix z-index issue

--- a/www/public/app/css/components/tiny-date-picker.css
+++ b/www/public/app/css/components/tiny-date-picker.css
@@ -13,6 +13,10 @@
   Override default styles
  */
 
+.dp {
+  z-index: auto;
+}
+
 .dp-below {
   width: var(--datePickerWidth);
 }
